fix z-index for logo link

--- a/css/main.css
+++ b/css/main.css
@@ -1333,6 +1333,8 @@ body {
   background-repeat: no-repeat;
   width: 74px;
   height: 74px;
+  position: relative;
+  z-index: 3;
 }
 
 .logo__year {
