--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -11,6 +11,8 @@
     background-repeat: no-repeat;
     width: 74px;
     height: 74px;
+    position: relative;
+    z-index: 3;
 }
 
 .logo__year {
